Update page.scss - Add Sticky Header/Fix Alignment
Add Sticky Header and also Fix Alignment of NavBar so it aligns with the Site Logo

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -14,6 +14,8 @@ body {
 
 .navigation-wrapper {
 	@include container;
+	position:sticky;
+	top:0;
 	padding: 0.3em 0 1em;
 	font-family: $heading-font;
 	font-weight: 700;
@@ -198,7 +200,7 @@ $button-size: 1.5rem;
 	}
 }
 .nav {
-	padding-top: 1.5em;
+	padding-top: 1.2em;
 }
 
 .nav li {
